--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goa vibes by Inbal</title>
+    <title>Goa vibes by Inbal Cohen</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"> <!-- https://fonts.google.com/ -->
     <link rel="stylesheet" href="fontawesome/css/all.min.css"> <!-- https://fontawesome.com/ -->
     <link rel="stylesheet" href="css/magnific-popup.css"> 
@@ -444,7 +444,7 @@ https://templatemo.com/tm-554-ocean-vibes
                         </div>
                     </div>
 
-                 <p>If you want more specific information please call or e-mail me</p>
+                 <p>If you want more specific information you can call or e-mail me</p>
 
                     <!-- Links -->
                     <ul class="tm-contact-links">
