--- a/index.html
+++ b/index.html
@@ -249,6 +249,16 @@ https://templatemo.com/tm-554-ocean-vibes
                         </figure>                
                     </div>
                 </div>
+		      <div class="tm-text-center">
+                                <a href="#" class="tm-btn tm-btn-primary mfp-prevent-close tm-btn-next">
+                                    Next Page
+                                </a>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>                
+            </div> 
+        </div>
                 <!-- Gallery navigation and description -->
                 <div class="tm-col tm-gallery-right">
                     <h2 class="tm-color-primary tm-mt-35 tm-page-title">Gallery</h2>
